--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,6 @@
-<h1>Hello,This is shivani mailare </h1>
+<div class="jumbotron">
+<h1>MyToDoList</h1>
+<p>This is my smart </p>
+<%= link_to "Sign Up","#", class: "btn btn-primary btn-lg"%>
 
+</div>
